2005-03-08  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm (discover):
	New device capability: 'interfaceIndexingManaged'.
	New DDX parameters: 'RFC2863_IF_MIB::ifindex-map-hint'
	and 'RFC2863_IF_MIB::subtree-name-hint'.

	* xmlconfig/generic/rfc2863.if-mib.xml: Moved "ifindex-table"
	definition from snmp-defs to IF-MIB host template

	* perllib/Torrus/DevDiscover.pm (discover):
	In the legend, replace ':' with '=' and ';' with ','

2005-03-05  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover.pm (oidBaseMatch): better OID comparison

2005-02-28  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Renderer.pm (newCacheFileName): MD5 to generate
	unique file names

2005-02-18  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* configure.ac (also in all plugins): AM_INIT_AUTOMAKE(1.9)
	instead of 1.6. The old version conflicted with plugins.

2005-01-30  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* doc/Makefile.am: Variable substitution in doc files

	* doc/manpages/Makefile.am: Man sections configurable

	* perllib/Torrus/DevDiscover/CiscoIOS_Docsis.pm:
	New discovery module for Cisco-specific DOCSIS statistics

2005-01-21  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm (discover):
	Moved the IF-MIB discovery from checkdevtype() to discover()

2005-01-06  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/AxxessIT.pm: new discovery module

2005-01-04  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm (checkdevtype):
	Interface excluded when ifOperStatus=6 [notPresent]

2004-12-27  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* bin/devdiscover.in (absXmlFilename): output file is placed in
	siteXmlDir if the path is not absolute. $XMLCONFIG is still